--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   ],
   "scripts": {
     "build": "tsc --skipLibCheck",
+    "buildit": "yarn install && yarn install --production",
+    "buildprod": "yarn install --production",
     "lint": "eslint ./src --ext .js,.ts,.tsx",
     "prepare": "yarn build"
   },
   "devDependencies": {
+    "@shopify/flash-list": "^1.4.1",
+    "@types/deep-diff": "^1.0.2",
+    "@types/lodash": "^4.14.191",
     "@types/react": "^17.0.40",
     "@types/react-native": "^0.67.3",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
@@ -33,8 +38,14 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-native": "^4.0.0",
     "prettier": "^2.6.0",
-    "react": "^17.0.2",
-    "react-native": "^0.67.3",
+    "react-native-reanimated": "^2.14.4",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "deep-diff": "^1.0.2"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-native": "^0.67.3"
   }
 }
