--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "lib": ["es6"],
     "strict": true,
     "outDir": "./lib",
-    "declaration": true
+    "declaration": true,
+    "allowJs" : true
   },
   "include": ["./src/**/*"]
 }
